skoro pa zavrseno sve za kontrolnu tacku

--- a/NezdravaHrana/src/main/webapp/reactjs/src/App.css
+++ b/NezdravaHrana/src/main/webapp/reactjs/src/App.css
@@ -3,19 +3,42 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 24vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+.card {
+  margin-bottom: 30px;
+}
+
+.slikaArtikla {
+  width : 300px;
+  height : 300px;
+}
+
+.greatSuccess {
+  width : 420px;
+  height : 240px;
+  margin-top : 30px;
+}
+
+/*@media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}*/
+
+.info-border{
+  border: 1px solid black;
+  margin-top: 7px;
+}
+.navbarLogout{
+  float: right;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,10 +47,40 @@
   color: white;
 }
 
+.linkovi{
+  font-size: 21px;
+}
+.boja{
+  color: red;
+}
+.text{
+  color: white;
+}
+
+.btn{
+  margin: 7px;
+  font-size: 18px;
+  background-color: #dc3444;
+  border-color: #dc3444;
+}
+
+.kontejner{
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.velikaTabela{
+  margin-top: 25px;
+  width: 90%;
+  margin-left: 5%;
+}
+
 .App-link {
   color: #61dafb;
 }
-
+.kalendar {
+  margin-left: 85vh;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +88,30 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+button {
+  margin: 5px;
+}
+
+.buttons {
+  display: inline-block;
+}
+
+nav {
+  background-color:#282a36;
+  color: white;
+  text-align: center;
+  border-bottom: 2px solid black;
+  position: fixed;
+  z-index: 9998;
+  width: 100%;
+}
+
+footer {
+  background-color: #282a36;
+  color: white;
+  text-align: center;
+  border-top: 2px solid black;
+  padding: 10px;
 }
